@@ -1,5 +1,8 @@
 1.3.5 - TBD
-    * Added single color textures option (on the Option tab of the main window)
+    * Added "follow camera" option to the Map View tab of the main window
+    * Added camera field of view indicator in the 2D map
+    * Added single color textures option, found under the Options tab in
+      the main window
     * Added paintings rendering
     * The sky light modifier can now be set to zero by typing "0" in the
       text field next to the sky light slider
